--- a/src/components/navbar_style.css
+++ b/src/components/navbar_style.css
@@ -5,6 +5,9 @@
   justify-content: space-between;
   align-items: center;
   color: #fff;
+  z-index: 2;
+  border-bottom: 3px solid #215ba2;
+  position: relative;
 }
 
 .logo__container {
